load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.property_map.parallel",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.assert",
        "@boost.concept_check",
        "@boost.config",
        "@boost.function",
        "@boost.mpi",
        "@boost.mpl",
        "@boost.multi_index",
        "@boost.optional",
        "@boost.property_map",
        "@boost.serialization",
        "@boost.smart_ptr",
        "@boost.static_assert",
        "@boost.type_traits",
    ],
)
